--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -85,14 +85,15 @@
       "inProgress":"The first player is creating the room right now. Please wait and try again.",
       "roomIsFull":"This room is already full. Please try another."
     },
-    "CardRoomName":{"title":"Type a room name."},
+    "CardRoomName":{"title":"Type a room name to create a new room or join a existing room"},
     "CardRoomPlayerName":{"title":"Type a player name.","anonymousPlayerName":"Anonymous 🕵"},
     "CardRoomSize":{"title":"Set a room size."},
     "CardRoomTime":{"title":"Set a time limitation.","infinite":"Infinite"},
     "CardRoomSettings":{
       "title":"Game Settings",
       "modeLabel":"Select game mode",
-      "timeAttackLabel":"TimeAttack demo"
+      "timeAttackLabel":"TimeAttack",
+      "timeattackInfos":"In TimeAttack mode, only the player who guesses the country first gets the point. Be quick and win!"
     },
     "CardRoomDifficulty":{
       "title":"Set a difficulty level.",
