feat: #95 alerte back

--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -32,7 +32,8 @@
         "waitForOtherPlayers": "En attente des autres joueurs...",
         "redirectToHomePage": "Redirection vers la page d'accueil...",
         "exitGame": "Vous êtes forcé de quitter le jeu. Redirection vers la page d'accueil dans 5 secondes...",
-        "waitForOtherPlayersToFinish": "En attente des autres joueurs pour finir la partie..."
+        "waitForOtherPlayersToFinish": "En attente des autres joueurs pour finir la partie...",
+        "confirmExit": "Etes-vous sûr de quitter la partie en cours ?"
     },
     "Maps": {
         "makeGuess": "FAIRE UN CHOIX",
