--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -32,7 +32,8 @@
       "waitForOtherPlayers":"Waiting for other players...",
       "redirectToHomePage":"Redirect to Home Page...",
       "exitGame":"You are forced to exit the game. Redirect to home page after 5 seconds...",
-      "waitForOtherPlayersToFinish":"Waiting for other players to finish the game..."
+      "waitForOtherPlayersToFinish":"Waiting for other players to finish the game...",
+      "confirmExit": "Are you sure to leave the current game ?"
     },
     "Maps":{
       "makeGuess":"MAKE GUESS",
