init laucnh queue

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -67,7 +67,9 @@
       "url":"Url",
       "file":"File",
       "edit":"Edit Map",
-      "fileLabel":"Select GeoJSON file"
+      "fileLabel":"Select GeoJSON file",
+      "OK": "OK",
+      "download": "Download GeoJSON"
     },
     "History":{
       "title":"History",
