Update source file en.json [ci skip]

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -67,7 +67,9 @@
       "url":"Url",
       "file":"File",
       "edit":"Edit Map",
-      "fileLabel":"Select GeoJSON file"
+      "fileLabel":"Select GeoJSON file",
+      "OK": "OK",
+      "download": "Download GeoJSON"
     },
     "History":{
       "title":"History",
@@ -77,7 +79,10 @@
       "distance":"Distance",
       "points":"Points",
       "rank":"Rank",
-      "search":"Search"
+      "search":"Search",
+      "exportGeoSave":"Export GeoSave",
+      "importGeoSave":"Import GeoSave",
+      "exportCSV":"Export CSV"
     },
     "DialogRoom":{
       "singlePlayer":"Single Player",
