--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -33,7 +33,8 @@
       "redirectToHomePage":"Redirect to Home Page...",
       "exitGame":"You are forced to exit the game. Redirect to home page after 5 seconds...",
       "waitForOtherPlayersToFinish":"Waiting for other players to finish the game...",
-      "confirmExit": "Are you sure to leave the current game? This will abort the game!"
+      "confirmExit": "Are you sure to leave the current game? This will abort the game!",
+      "countdownAlert": "Countdown started : {count} seconde remaining | Countdown started : {count} secondes remaining"
     },
     "Maps":{
       "makeGuess":"MAKE GUESS",
