--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -34,7 +34,7 @@
       "exitGame":"You are forced to exit the game. Redirect to home page after 5 seconds...",
       "waitForOtherPlayersToFinish":"Waiting for other players to finish the game...",
       "confirmExit": "Are you sure to leave the current game? This will abort the game!",
-      "countdownAlert": "Countdown started : {count} seconde remaining | Countdown started : {count} secondes remaining"
+      "countdownAlert": "Countdown started : {count} second remaining | Countdown started : {count} seconds remaining"
     },
     "Maps":{
       "makeGuess":"MAKE GUESS",
@@ -125,5 +125,6 @@
     "Demo":{
       "message":"If you want to contribute to a project and make it better, your help is very welcome :  Translation 🔠, Mapper 🌍, Code 💻, Idea 💡, Beta test 👀.",
       "btn":"Join Us"
-    }
+    },
+    "OK": "OK"
   }
