--- a/src/lang/locale/ru.json
+++ b/src/lang/locale/ru.json
@@ -99,7 +99,7 @@
     "title": "Введите название комнаты, чтобы создать новую комнату или присоединиться к существующей комнате"
   },
   "CardRoomPlayerName": {
-    "title": "Введите имя игрока.",
+    "input": "Введите имя игрока.",
     "anonymousPlayerName": "Аноним 🕵"
   },
   "CardRoomSize": {
