--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -93,7 +93,7 @@
     "roomIsFull":"This room is already full. Please try another."
   },
   "CardRoomName":{"title":"Type a room name to create a new room or join a existing room"},
-  "CardRoomPlayerName":{"title":"Type a player name.","anonymousPlayerName":"Anonymous 🕵"},
+  "CardRoomPlayerName":{"title":"Room:","input":"Type a player name.","anonymousPlayerName":"Anonymous 🕵", "players": "1 player | {count} players"},
   "CardRoomSize":{"title":"Set a room size."},
   "CardRoomTime":{"title":"Set a time limitation.","infinite":"Infinite"},
   "CardRoomSettings":{
