Feature/room waiting (#149)
* Init Step

* feat: Waiting Room

* remove waiting

* improve UI

* feat: add flag

* fix: indent

* fix: eslint

--- a/src/lang/locale/cs.json
+++ b/src/lang/locale/cs.json
@@ -99,7 +99,7 @@
     "title": "Napiš název herní mistnosti, aby jsi ji vytvořil nebo se do ní připojil"
   },
   "CardRoomPlayerName": {
-    "title": "Jak se chceš jmenovat?",
+    "input": "Jak se chceš jmenovat?",
     "anonymousPlayerName": "Anonym 🕵"
   },
   "CardRoomSize": {
