--- a/src/lang/locale/pt.json
+++ b/src/lang/locale/pt.json
@@ -93,14 +93,17 @@
     "withFriends": "Com amigos",
     "invalidRoomName": "Nome inválido. Por favor, tente outro.",
     "inProgress": "O primeiro jogador está criando a sala agora. Aguarde e tente novamente.",
-    "roomIsFull": "Esta sala já está cheia. Por favor, tente outra."
+    "roomIsFull": "Esta sala já está cheia. Por favor, tente outra.",
+    "alreadyStarted": "Está sala já começou o jogo. Por favor, tente outra."
   },
   "CardRoomName": {
     "title": "Digite o nome da sala para criar uma nova sala ou junte-se a uma sala existente"
   },
   "CardRoomPlayerName": {
-    "input": "Digite um nome de jogador.",
-    "anonymousPlayerName": "Anônimo 🕵"
+    "title": "Sala:",
+    "input": "Type a player name.",
+    "anonymousPlayerName": "Anônimo 🕵",
+    "players": "1 player | {count} players"
   },
   "CardRoomSize": {
     "title": "Defina o tamanho da sala."
@@ -112,7 +115,7 @@
   "CardRoomSettings": {
     "title": "Configurações da partida",
     "modeLabel": "Selecione o modo de jogo",
-    "includePhotopheres": "Include Photospheres",
+    "includePhotopheres": "Incluir Photospheres",
     "timeAttackLabel": "TimeAttack",
     "timeattackInfos": "No modo TimeAttack, apenas o jogador que adivinhar o país primeiro ganha o ponto. Seja rápido e vença!",
     "allowMove": "Permitir movimento",
@@ -149,6 +152,6 @@
     "btn": "Junte-se a nós"
   },
   "OK": "OK",
-  "yes": "yes",
-  "no": "no"
+  "yes": "Sim",
+  "no": "Não"
 }
