--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -1,6 +1,6 @@
 {
     "Home": {
-        "record": "Record",
+        "placeVisited": "0 place visited | 1 place visited | {count} places visited",
         "historyBtn": "HISTORY",
         "about": "ABOUT",
         "searchBar": {
