--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -1,6 +1,6 @@
 {
     "Home": {
-        "record": "Record",
+        "placeVisited": "0 lieu visité | 1 lieu visité | {count} lieux visités",
         "historyBtn": "Historique",
         "about": "A PROPOS",
         "searchBar": {
