--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -22,7 +22,9 @@
         },
         "limitation": "LIMITATION",
         "limitationDescription": "Currently I set quotas per day so the cost to run this game can't get too high.             If the map doesn't load, it means the quotas has been exceeded on the day.             It will reset at midnight Pacific Time. Sorry for inconvenience.             This game is open source so you can build your own game server and play this game unlimitedly.",
-        "play": "Play"
+        "play": "Play",
+        "streamerModeActivate": "Streamer mode activate",
+        "streamerModeDetails": "Urls and roomName are hidden"
     },
     "StreetView": {
         "nearby": {
