--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -118,7 +118,13 @@
         "timeattackInfos": "In TimeAttack mode, only the player who guesses the country first gets the point. Be quick and win!",
         "allowMove": "Allow Move",
         "allowZoom": "Allow Zoom",
-        "allowPan": "Allow Pan"
+        "allowPan": "Allow Pan", 
+        "countDownLabel": "CountDown (seconds)",       
+        "scoreModeLabel": "Score formula",
+        "scoreModes": {
+            "normal": "normal",
+            "time": "time"
+        }
     },
     "CardRoomDifficulty": {
         "title": "Set a difficulty level.",
