--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+- REFACTO to store:
+    - Lien de partage de room a mettre en place
+    - RESET Store a voir
+
 - HomeCard launch mode area
 - Remove Area Mode from Card Settings (Found idea from interface)
 - History
