feat(lang): Add he language

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -28,6 +28,10 @@
         "HomeCardMode": {
             "map": "Map",
             "area": "Area"
+        },
+        "Sections": {
+            "areasTitle": "Areas",
+            "mapsTitle": "Maps"
         }
     },
     "StreetView": {
@@ -86,6 +90,7 @@
         "distance": "Distance",
         "points": "Points",
         "rank": "Rank",
+        "actions": "Actions",
         "search": "Search",
         "exportGeoSave": "Export GeoSave",
         "importGeoSave": "Import GeoSave",
@@ -129,7 +134,8 @@
             "normal": "normal",
             "time": "time"
         },
-        "selectAreas": "Select Areas"
+        "selectAreas": "Select Areas",
+        "moreSettings": "More settings"
     },
     "CardRoomDifficulty": {
         "title": "Set a difficulty level.",
