--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -48,7 +48,7 @@
         "nextRound": "MANCHE SUIVANTE",
         "viewSummary": "VOIR LE RÉSUMÉ",
         "exit": "QUITTER",
-        "reset": "RÉINIT.",
+        "reset": "RÉINITIALISER",
         "playAgain": "REJOUER",
         "infoWindow": {
             "Distance": "Distance",
