Update source file en.json [ci skip]

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -28,10 +28,6 @@
         "HomeCardMode": {
             "map": "Map",
             "area": "Area"
-        },
-        "Sections": {
-            "areasTitle": "Areas",
-            "mapsTitle": "Maps"
         }
     },
     "StreetView": {
@@ -90,7 +86,6 @@
         "distance": "Distance",
         "points": "Points",
         "rank": "Rank",
-        "actions": "Actions",
         "search": "Search",
         "exportGeoSave": "Export GeoSave",
         "importGeoSave": "Import GeoSave",
@@ -134,8 +129,7 @@
             "normal": "normal",
             "time": "time"
         },
-        "selectAreas": "Select Areas",
-        "moreSettings": "More settings"
+        "selectAreas": "Select Areas"
     },
     "CardRoomDifficulty": {
         "title": "Set a difficulty level.",
