New Crowdin updates (#201)
* New translations en.json (French)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* Update source file en.json
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -28,6 +28,10 @@
         "HomeCardMode": {
             "map": "Carte",
             "area": "Zone"
+        },
+        "Sections": {
+            "areasTitle": "Zones",
+            "mapsTitle": "Cartes"
         }
     },
     "StreetView": {
@@ -89,6 +93,7 @@
         "distance": "Distance",
         "points": "Points",
         "rank": "Classement",
+        "actions": "Actions",
         "search": "Rechercher",
         "exportGeoSave": "Exporter en GeoSave",
         "importGeoSave": "Import une GeoSave",
@@ -134,7 +139,8 @@
             "normal": "normal",
             "time": "temps"
         },
-        "selectAreas": "Sélectionner les zones"
+        "selectAreas": "Sélectionner les zones",
+        "moreSettings": "Paramètres avancés"
     },
     "CardRoomDifficulty": {
         "title": "Saisir la difficulté.",
