New Crowdin updates (#343)
* New translations en.json (German)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (German)
[ci skip]

--- a/src/lang/locale/de.json
+++ b/src/lang/locale/de.json
@@ -92,7 +92,7 @@
         "fileLabel": "GeoJSON-Datei auswählen",
         "OK": "Okay",
         "download": "GeoJSON herunterladen",
-        "Clean": "Bereinigen",
+        "Clean": "Löschen",
         "save": "speichern",
         "inputName": {
             "label": "Kartenname",
@@ -195,7 +195,7 @@
     "yes": "ja",
     "no": "nein",
     "AlertUpdate": {
-        "label": "A new version is available. Click on the button to obtain it.",
+        "label": "Eine neue Version ist verfügbar. Klicke auf die Schaltfläche, um sie zu installieren.",
         "btn": "Update"
     }
 }
