--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -64,10 +64,7 @@
         "exit": "EXIT",
         "reset": "RESET",
         "playAgain": "PLAY AGAIN",
-        "infoWindow": {
-            "Distance": "Distance",
-            "Points": "Points"
-        }
+        "infoWindow": { "Distance": "Distance", "Points": "Points" }
     },
     "Header": {
         "language": "Language",
@@ -133,9 +130,7 @@
         "anonymousPlayerName": "Anonymous 🕵",
         "players": "1 player | {count} players"
     },
-    "CardRoomSize": {
-        "title": "Set a room size."
-    },
+    "CardRoomSize": { "title": "Set a room size." },
     "CardRoomTime": {
         "title": "Set a time limit.",
         "infinite": "Infinite"
@@ -176,14 +171,9 @@
         "summaryMsgMultiDistance": "(<strong>{distance}</strong> km away)",
         "viewDetails": "View details"
     },
-    "Footer": {
-        "under": "under",
-        "privacyPolicy": "Privacy Policy"
-    },
+    "Footer": { "under": "under", "privacyPolicy": "Privacy Policy" },
     "urlCopied": "Url copied",
-    "DetailsMap": {
-        "moreInfo": "More information"
-    },
+    "DetailsMap": { "moreInfo": "More information" },
     "modes": {
         "classic": "Classic",
         "country": "Pick country",
@@ -196,7 +186,7 @@
     "OK": "OK",
     "yes": "yes",
     "no": "no",
-    "AlertUpdate": {
+    "AlertUpdate":{
         "label": "A new version is available. Click on the button to obtain it.",
         "btn": "Update"
     }
